<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.6.7</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.ubiqube.mano</groupId>
	<artifactId>mano-super-pom</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>mano-super-pom</name>
	<description>ETSI-MANO super pom</description>
	<scm>
		<developerConnection>scm:git:ssh://git@ubibucket.ubiqube.com:7999/ubi/ubi-etsi-mano.git</developerConnection>
	</scm>
	<distributionManagement>
		<snapshotRepository>
			<id>nexus-snapshots</id>
			<url>http://nexus2.ubiqube.com:8081/repository/maven-snapshots/</url>
		</snapshotRepository>
		<repository>
			<id>nexus-releases</id>
			<url>http://nexus2.ubiqube.com:8081/repository/maven-releases/</url>
		</repository>
	</distributionManagement>

	<properties>
		<java.version>17</java.version>
		<maven.compiler.target>17</maven.compiler.target>
		<maven.compiler.source>17</maven.compiler.source>
		<m2e.apt.activation>jdt_apt</m2e.apt.activation>
		<com.ubiqube.hibernate-search.version>5.11.10.Final</com.ubiqube.hibernate-search.version>
		<com.ubiqube.hibernate-search6.version>6.1.4.Final</com.ubiqube.hibernate-search6.version>
		<com.ubiqube.openstack4j.version>3.11-SNAPSHOT</com.ubiqube.openstack4j.version>
		<com.ubiqube.swagger3>2.2.0</com.ubiqube.swagger3>
		<com.ubiqube.mockito.version>4.5.1</com.ubiqube.mockito.version>
		<com.ubiqube.elasticsearch.version>8.1.3</com.ubiqube.elasticsearch.version>
		<com.ubiqube.springdoc.version>1.6.8</com.ubiqube.springdoc.version>
	</properties>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-search-orm</artifactId>
				<version>${com.ubiqube.hibernate-search.version}</version>
			</dependency>
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-search-elasticsearch</artifactId>
				<version>${com.ubiqube.hibernate-search.version}</version>
			</dependency>
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-search-backend-lucene</artifactId>
				<version>${com.ubiqube.hibernate-search.version}</version>
			</dependency>
			<dependency>
				<groupId>org.hibernate.search</groupId>
				<artifactId>hibernate-search-mapper-orm</artifactId>
				<version>${com.ubiqube.hibernate-search6.version}</version>
			</dependency>
			<dependency>
				<groupId>org.hibernate.search</groupId>
				<artifactId>hibernate-search-backend-elasticsearch</artifactId>
				<version>${com.ubiqube.hibernate-search6.version}</version>
			</dependency>
			<dependency>
				<groupId>org.hibernate.search</groupId>
				<artifactId>hibernate-search-mapper-pojo-base</artifactId>
				<version>${com.ubiqube.hibernate-search6.version}</version>
			</dependency>
			<dependency>
				<groupId>org.hibernate.search</groupId>
				<artifactId>hibernate-search-engine</artifactId>
				<version>${com.ubiqube.hibernate-search6.version}</version>
			</dependency>

			<dependency>
				<groupId>com.google.code.findbugs</groupId>
				<artifactId>jsr305</artifactId>
				<version>3.0.2</version>
			</dependency>
			<dependency>
				<groupId>io.swagger</groupId>
				<artifactId>swagger-annotations</artifactId>
				<version>1.6.6</version>
			</dependency>
			<dependency>
				<groupId>net.rakugakibox.spring.boot</groupId>
				<artifactId>orika-spring-boot-starter</artifactId>
				<version>1.9.0</version>
			</dependency>
			<dependency>
				<groupId>ma.glasnost.orika</groupId>
				<artifactId>orika-core</artifactId>
				<version>1.5.5-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>ma.glasnost.orika</groupId>
				<artifactId>orika-eclipse-tools</artifactId>
				<version>1.5.5-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>com.github.dexecutor</groupId>
				<artifactId>dexecutor-core</artifactId>
				<version>2.1.4</version>
			</dependency>
			<dependency>
				<groupId>org.jgrapht</groupId>
				<artifactId>jgrapht-io</artifactId>
				<version>1.5.1</version>
			</dependency>
			<dependency>
				<groupId>org.antlr</groupId>
				<artifactId>antlr4-runtime</artifactId>
				<version>4.9.3</version>
			</dependency>
			<dependency>
				<groupId>com.github.openstack4j.core</groupId>
				<artifactId>openstack4j-core</artifactId>
				<version>${com.ubiqube.openstack4j.version}</version>
			</dependency>
			<dependency>
				<groupId>com.github.openstack4j.core.connectors</groupId>
				<artifactId>openstack4j-httpclient</artifactId>
				<version>${com.ubiqube.openstack4j.version}</version>
			</dependency>
			<!-- Hibernate search 6.x -->
			<dependency>
				<groupId>org.elasticsearch.client</groupId>
				<artifactId>elasticsearch-rest-client</artifactId>
				<version>${com.ubiqube.elasticsearch.version}</version>
			</dependency>
			<dependency>
				<groupId>org.elasticsearch.client</groupId>
				<artifactId>elasticsearch-rest-client-sniffer</artifactId>
				<version>${com.ubiqube.elasticsearch.version}</version>
			</dependency>
			<dependency>
				<groupId>org.codehaus.groovy</groupId>
				<artifactId>groovy-all</artifactId>
				<version>3.0.10</version>
				<type>pom</type>
				<exclusions>
					<exclusion>
						<groupId>org.codehaus.groovy</groupId>
						<artifactId>groovy-test</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.codehaus.groovy</groupId>
						<artifactId>groovy-testng</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.jgrapht</groupId>
				<artifactId>jgrapht-core</artifactId>
				<version>1.5.1</version>
			</dependency>
			<dependency>
				<groupId>io.swagger.core.v3</groupId>
				<artifactId>swagger-annotations</artifactId>
				<version>${com.ubiqube.swagger3}</version>
			</dependency>
			<dependency>
				<groupId>com.tngtech.archunit</groupId>
				<artifactId>archunit-junit5</artifactId>
				<version>0.23.1</version>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>${com.ubiqube.mockito.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-junit-jupiter</artifactId>
				<version>${com.ubiqube.mockito.version}</version>
			</dependency>
			<dependency>
				<groupId>uk.co.jemos.podam</groupId>
				<artifactId>podam</artifactId>
				<version>7.2.9.RELEASE</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-vfs2</artifactId>
				<version>2.9.0</version>
			</dependency>
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-ui</artifactId>
				<version>${com.ubiqube.springdoc.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-security</artifactId>
				<version>${com.ubiqube.springdoc.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-data-rest</artifactId>
				<version>latest.version</version>
			</dependency>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>31.0.1-jre</version>
			</dependency>
			<dependency>
				<groupId>org.keycloak</groupId>
				<artifactId>keycloak-spring-boot-starter</artifactId>
				<version>18.0.0</version>
			</dependency>
			<dependency>
				<groupId>de.codecentric</groupId>
				<artifactId>spring-boot-admin-starter-client</artifactId>
				<version>2.6.6</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<build>
		<plugins>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.8</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>io.github.git-commit-id</groupId>
				<artifactId>git-commit-id-maven-plugin</artifactId>
				<version>5.0.0</version>
				<configuration>
					<generateGitPropertiesFile>true</generateGitPropertiesFile>
					<generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
					<verbose>true</verbose>
					<commitIdGenerationMode>full</commitIdGenerationMode>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>revision</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.mycila.maven-license-plugin</groupId>
				<artifactId>maven-license-plugin</artifactId>
				<version>1.10.b1</version>
				<configuration>
					<header>LICENSE</header>
					<properties>
						<project>
							${project.name}
						</project>
						<founder>Ubiqube</founder>
						<year>2019-2020</year>
						<website>http://www.ubiqube.com/</website>
					</properties>
					<includes>
						<include>src/main/java/**</include>
						<include>src/test/java/**</include>
					</includes>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>format</goal>
						</goals>
						<phase>process-sources</phase>
					</execution>
				</executions>
				<dependencies>
					<dependency>
						<groupId>com.mycila</groupId>
						<artifactId>licenses</artifactId>
						<version>1</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>17</source>
					<target>17</target>
					<fork>true</fork>
					<compilerArgs>
						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
					</compilerArgs>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>1.18.24</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings 
					only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											com.mycila.maven-license-plugin
										</groupId>
										<artifactId>
											maven-license-plugin
										</artifactId>
										<versionRange>
											[1.10.b1,)
										</versionRange>
										<goals>
											<goal>format</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>jdepend-maven-plugin</artifactId>
				<version>2.0</version>
			</plugin>
		</plugins>
	</reporting>
</project>
